// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots display/Chip Chip List Group 1`] = `
<ul
  className="sc-gsnTZi cgptcv"
>
  <li
    className="sc-bczRLJ eCwSUC"
    color="secondary"
  >
    Chip No.1
  </li>
  <li
    className="sc-bczRLJ kFRnpC"
    color="primary"
  >
    Chip No.2
  </li>
  <li
    className="sc-bczRLJ eCwSUC"
    color="secondary"
  >
    Chip No.3
  </li>
  <li
    className="sc-bczRLJ kaQvzq"
    color="primary"
  >
    Chip No.4
  </li>
  <li
    className="sc-bczRLJ epEICQ"
    color="secondary"
  >
    Chip No.5
  </li>
  <li
    className="sc-bczRLJ kaQvzq"
    color="primary"
  >
    Chip No.6
  </li>
  <li
    className="sc-bczRLJ eCwSUC"
    color="secondary"
  >
    Chip No.7
  </li>
  <li
    className="sc-bczRLJ kFRnpC"
    color="primary"
  >
    Chip No.8
  </li>
</ul>
`;

exports[`Storyshots display/Chip Disabled 1`] = `
<li
  className="sc-bczRLJ hzoKJI"
  color="primary"
  disabled={true}
>
  Disabled
</li>
`;

exports[`Storyshots display/Chip Docs 1`] = `
<li
  className="sc-bczRLJ kaQvzq"
  color="primary"
>
  Docs
</li>
`;

exports[`Storyshots display/Chip Outlined 1`] = `
<li
  className="sc-bczRLJ epEICQ"
  color="secondary"
>
  Outlined
</li>
`;

exports[`Storyshots display/OutlineDescription Docs 1`] = `
<div
  className="sc-dkzDqf ibIvJX"
>
  初めての方は
  <a
    href="#"
  >
    新規アカウント登録
  </a>
</div>
`;

exports[`Storyshots display/Tooltip Docs 1`] = `
<div
  className="sc-jSMfEi bMBrRe"
>
  <div
    className="sc-eCYdqJ jBkYZu"
    visibleOnHover={true}
  >
    <button
      className="sc-gKXOVf dKkGVv"
    >
      hover me
    </button>
    <span
      className="sc-hKMtZM bPuqLq"
      color="primary"
    >
      tooltip sample
    </span>
  </div>
</div>
`;

exports[`Storyshots display/Tooltip With State 1`] = `
<div
  className="sc-jSMfEi bMBrRe"
>
  <div
    className="sc-eCYdqJ gDjOYY"
    show={false}
  >
    <button
      className="sc-gKXOVf dKkGVv"
      onClick={[Function]}
    >
      hover me
    </button>
    ,
    <span
      className="sc-hKMtZM bPuqLq"
      color="primary"
    >
      tooltip
    </span>
  </div>
</div>
`;

exports[`Storyshots feedback/Snackbar Docs 1`] = `
<div
  className="sc-jqUVSM fhsvAw"
>
  <div
    className="sc-ftvSup eNVwVM"
  >
    <svg
      aria-hidden={true}
      className="sc-iBkjds fiupan sc-kDDrLX taHkU"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M11 7h2v2h-2zm0 4h2v6h-2zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
      />
    </svg>
  </div>
  <div
    className="sc-papXJ hxeqDt"
  >
    snackbar
  </div>
</div>
`;

exports[`Storyshots feedback/Snackbar Error 1`] = `
<div
  className="sc-jqUVSM ieRutG"
>
  <div
    className="sc-ftvSup eNVwVM"
  >
    <svg
      aria-hidden={true}
      className="sc-iBkjds fiupan sc-kDDrLX taHkU"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
      />
    </svg>
  </div>
  <div
    className="sc-papXJ hxeqDt"
  >
    Error snackbar
  </div>
</div>
`;

exports[`Storyshots feedback/Snackbar Info 1`] = `
<div
  className="sc-jqUVSM fhsvAw"
>
  <div
    className="sc-ftvSup eNVwVM"
  >
    <svg
      aria-hidden={true}
      className="sc-iBkjds fiupan sc-kDDrLX taHkU"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M11 7h2v2h-2zm0 4h2v6h-2zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
      />
    </svg>
  </div>
  <div
    className="sc-papXJ hxeqDt"
  >
    Info snackbar
  </div>
</div>
`;

exports[`Storyshots feedback/Snackbar Long Text 1`] = `
<div
  className="sc-jqUVSM fhsvAw"
>
  <div
    className="sc-ftvSup eNVwVM"
  >
    <svg
      aria-hidden={true}
      className="sc-iBkjds fiupan sc-kDDrLX taHkU"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M11 7h2v2h-2zm0 4h2v6h-2zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
      />
    </svg>
  </div>
  <div
    className="sc-papXJ hxeqDt"
  >
    long long long long long long long long long long long long long long long long long long long long text
  </div>
</div>
`;

exports[`Storyshots feedback/Snackbar Success 1`] = `
<div
  className="sc-jqUVSM jqsetS"
>
  <div
    className="sc-ftvSup eNVwVM"
  >
    <svg
      aria-hidden={true}
      className="sc-iBkjds fiupan sc-kDDrLX taHkU"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M11 7h2v2h-2zm0 4h2v6h-2zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
      />
    </svg>
  </div>
  <div
    className="sc-papXJ hxeqDt"
  >
    Success snackbar
  </div>
</div>
`;

exports[`Storyshots feedback/Snackbar Warning 1`] = `
<div
  className="sc-jqUVSM cyyXVz"
>
  <div
    className="sc-ftvSup eNVwVM"
  >
    <svg
      aria-hidden={true}
      className="sc-iBkjds fiupan sc-kDDrLX jEqMZg"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
      />
    </svg>
  </div>
  <div
    className="sc-papXJ hxeqDt"
  >
    Warning snackbar
  </div>
</div>
`;

exports[`Storyshots feedback/Snackbar/SnackbarProvider Play 1`] = `
<div>
  <button
    className="sc-crXcEl cWjlej"
    onClick={[Function]}
  >
    info
  </button>
  <button
    className="sc-crXcEl cWjlej"
    onClick={[Function]}
  >
    success
  </button>
  <button
    className="sc-crXcEl cWjlej"
    onClick={[Function]}
  >
    warning
  </button>
  <button
    className="sc-crXcEl cWjlej"
    onClick={[Function]}
  >
    error
  </button>
</div>
`;

exports[`Storyshots feedback/dialogs/AlertDialog Docs 1`] = `
<div
  aria-labelledby="dialog-alert-dialog__label"
  aria-modal="true"
  className="sc-hAZoDl sc-dmRaPn iodGhl cKcOXl"
  id="alert-dialog"
  onClick={[Function]}
  role="dialog"
>
  <button
    className="sc-evZas iBlbdI"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-label="ダイアログを閉じる"
      className="sc-iBkjds eXmDJP"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
      />
    </svg>
  </button>
  <h2
    className="sc-breuTD kwZwOa"
    id="dialog-alert-dialog__label"
  >
    AlertDialog sample
  </h2>
  <div
    className="sc-ksZaOG abcSH"
  >
    <div
      className="sc-fnykZs fpwXMl"
    >
      AlertDialog contents
    </div>
    <div
      className="sc-hHLeRK gNECWI"
    >
      <button
        className="sc-idiyUo cHUJRD sc-dIouRR"
        color="secondary"
        onClick={[Function]}
        type="button"
      >
        OK
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots feedback/dialogs/ConfirmDialog Docs 1`] = `
<div
  aria-labelledby="dialog-confirm-dialog__label"
  aria-modal="true"
  className="sc-hAZoDl sc-kgflAQ iodGhl KaClX"
  id="confirm-dialog"
  onClick={[Function]}
  role="dialog"
>
  <button
    className="sc-evZas iBlbdI"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-label="ダイアログを閉じる"
      className="sc-iBkjds eXmDJP"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
      />
    </svg>
  </button>
  <h2
    className="sc-breuTD kwZwOa"
    id="dialog-confirm-dialog__label"
  >
    ConfirmDialog sample
  </h2>
  <div
    className="sc-ksZaOG abcSH"
  >
    <div
      className="sc-fnykZs fpwXMl"
    >
      ConfirmDialog contents
    </div>
    <div
      className="sc-hHLeRK gNECWI"
    >
      <button
        className="sc-idiyUo cHUJRD sc-dIouRR"
        color="secondary"
        onClick={[Function]}
        type="button"
      >
        OK
      </button>
      <button
        className="sc-idiyUo dNYGQm sc-dIouRR"
        color="default"
        onClick={[Function]}
        type="button"
      >
        キャンセル
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots feedback/dialogs/CustomDialog Docs 1`] = `
<div
  aria-describedby="dialog-custom-dialog__described"
  aria-labelledby="dialog-custom-dialog__label"
  aria-modal="true"
  className="sc-hAZoDl iodGhl"
  id="custom-dialog"
  onClick={[Function]}
  role="dialog"
>
  <button
    className="sc-evZas iBlbdI"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-label="ダイアログを閉じる"
      className="sc-iBkjds eXmDJP"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
      />
    </svg>
  </button>
  <h2
    className="sc-breuTD kwZwOa"
    id="dialog-custom-dialog__label"
  >
    Custom dialog sample
  </h2>
  <div
    className="sc-ksZaOG abcSH"
    id="dialog-custom-dialog__described"
  >
    Custom dialog contents
  </div>
</div>
`;

exports[`Storyshots feedback/dialogs/DialogProvider Play 1`] = `
<div>
  <button
    className="sc-ivTmOn dimZzj"
    onClick={[Function]}
  >
    Popup
  </button>
  <button
    className="sc-ivTmOn dimZzj"
    onClick={[Function]}
  >
    Alert
  </button>
  <button
    className="sc-ivTmOn dimZzj"
    onClick={[Function]}
  >
    Confirm
  </button>
  <button
    className="sc-ivTmOn dimZzj"
    onClick={[Function]}
  >
    Select
  </button>
  <button
    className="sc-ivTmOn dimZzj"
    onClick={[Function]}
  >
    Custom
  </button>
</div>
`;

exports[`Storyshots feedback/dialogs/PopupDialog Docs 1`] = `
<div
  aria-labelledby="dialog-popup-dialog__label"
  aria-modal="true"
  className="sc-hAZoDl iodGhl"
  id="popup-dialog"
  onClick={[Function]}
  role="dialog"
>
  <button
    className="sc-evZas iBlbdI"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-label="ダイアログを閉じる"
      className="sc-iBkjds eXmDJP"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
      />
    </svg>
  </button>
  <h2
    className="sc-breuTD kwZwOa"
    id="dialog-popup-dialog__label"
  >
    PopupDialog sample
  </h2>
  <div
    className="sc-ksZaOG abcSH"
  >
    <div
      className="sc-fnykZs fpwXMl"
    >
      PopupDialog contents
    </div>
  </div>
</div>
`;

exports[`Storyshots feedback/dialogs/SelectDialog Docs 1`] = `
<div
  aria-labelledby="dialog-select-dialog__label"
  aria-modal="true"
  className="sc-hAZoDl sc-fLlhyt iodGhl gojDdS"
  id="select-dialog"
  onClick={[Function]}
  role="dialog"
>
  <button
    className="sc-evZas iBlbdI"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-label="ダイアログを閉じる"
      className="sc-iBkjds eXmDJP"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
      />
    </svg>
  </button>
  <h2
    className="sc-breuTD kwZwOa"
    id="dialog-select-dialog__label"
  >
    SelectDialog sample
  </h2>
  <div
    className="sc-ksZaOG abcSH"
  >
    <div
      className="sc-fnykZs fpwXMl"
    >
      SelectDialog contents
    </div>
    <div
      className="sc-hHLeRK gNECWI"
    >
      <button
        className="sc-idiyUo cHUJRD sc-dIouRR"
        color="secondary"
        onClick={[Function]}
        type="button"
      >
        はい
      </button>
      <button
        className="sc-idiyUo hQiKYJ sc-dIouRR"
        color="primary"
        onClick={[Function]}
        type="button"
      >
        いいえ
      </button>
      <button
        className="sc-idiyUo dNYGQm sc-dIouRR"
        color="default"
        onClick={[Function]}
        type="button"
      >
        キャンセル
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots forms/PasswordForm Docs 1`] = `
<div
  className="sc-ikZpkk bAkAFX"
>
  <label
    aria-describedby="password-form-describe"
    className="sc-cxabCf jsgzcy"
    htmlFor="password-form"
    inline={false}
    required={true}
  >
    PasswordForm
  </label>
  <div
    className="sc-llJcti gGPsxJ"
  >
    <span
      id="password-form-describe"
    >
      半角英数6文字以上18文字以下で入力してください
    </span>
  </div>
  <div
    className="sc-kLLXSd hmhJIr"
  >
    <input
      className="sc-ezWOiH jyJKRD"
      hasError={false}
      id="password-form"
      name="password-docs"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="password sample"
      readOnly={false}
      type="password"
      value="PasswordForm sample"
    />
    <button
      className="sc-evZas iBlbdI sc-bZkfAO"
      onClick={[Function]}
      type="button"
    >
      <svg
        aria-label="パスワードを表示する"
        className="sc-iBkjds inntBc"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0zm0 0h24v24H0V0zm0 0h24v24H0V0zm0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M12 6c3.79 0 7.17 2.13 8.82 5.5-.59 1.22-1.42 2.27-2.41 3.12l1.41 1.41c1.39-1.23 2.49-2.77 3.18-4.53C21.27 7.11 17 4 12 4c-1.27 0-2.49.2-3.64.57l1.65 1.65C10.66 6.09 11.32 6 12 6zm-1.07 1.14L13 9.21c.57.25 1.03.71 1.28 1.28l2.07 2.07c.08-.34.14-.7.14-1.07C16.5 9.01 14.48 7 12 7c-.37 0-.72.05-1.07.14zM2.01 3.87l2.68 2.68C3.06 7.83 1.77 9.53 1 11.5 2.73 15.89 7 19 12 19c1.52 0 2.98-.29 4.32-.82l3.42 3.42 1.41-1.41L3.42 2.45 2.01 3.87zm7.5 7.5l2.61 2.61c-.04.01-.08.02-.12.02-1.38 0-2.5-1.12-2.5-2.5 0-.05.01-.08.01-.13zm-3.4-3.4l1.75 1.75c-.23.55-.36 1.15-.36 1.78 0 2.48 2.02 4.5 4.5 4.5.63 0 1.23-.13 1.77-.36l.98.98c-.88.24-1.8.38-2.75.38-3.79 0-7.17-2.13-8.82-5.5.7-1.43 1.72-2.61 2.93-3.53z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Storyshots forms/TextForm Docs 1`] = `
<div
  className="sc-gXmSlM gmwcss"
>
  <label
    aria-describedby="text-form-describe"
    className="sc-cxabCf jsgzcy"
    htmlFor="text-form"
    inline={false}
    required={true}
  >
    TextForm
  </label>
  <div
    className="sc-llJcti gGPsxJ"
  >
    <span
      id="text-form-describe"
    >
      登録したメールアドレスを入力してください
    </span>
  </div>
  <div
    className="sc-himrzO gGfMEn"
  >
    <input
      className="sc-ezWOiH jyJKRD"
      hasError={false}
      id="text-form"
      name="text-form-docs"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="input sample"
      readOnly={false}
      type="text"
      value="TextForm sample"
    />
    <button
      className="sc-evZas iBlbdI sc-jIZahH"
      onClick={[Function]}
      type="button"
    >
      <svg
        aria-label="text-form-docsの入力を削除する"
        className="sc-iBkjds inntBc"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M14.59 8L12 10.59 9.41 8 8 9.41 10.59 12 8 14.59 9.41 16 12 13.41 14.59 16 16 14.59 13.41 12 16 9.41 14.59 8zM12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Storyshots inputs/Button Disabled 1`] = `
<button
  className="sc-idiyUo jsZEzn"
  color="primary"
  disabled={true}
  type="button"
>
  Disabled
</button>
`;

exports[`Storyshots inputs/Button Docs 1`] = `
<button
  className="sc-idiyUo hQiKYJ"
  color="primary"
  onClick={[Function]}
  type="button"
  variant="contained"
>
  Docs
</button>
`;

exports[`Storyshots inputs/Button Loading 1`] = `
<button
  className="sc-idiyUo jsZEzn"
  color="primary"
  disabled={true}
  type="button"
>
  <div
    className="sc-bjUoiL bKzxvs"
  >
    <svg
      aria-hidden={true}
      className="sc-iBkjds fiupan sc-fEOsli drIlWz"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M12 4V1L8 5l4 4V6c3.31 0 6 2.69 6 6 0 1.01-.25 1.97-.7 2.8l1.46 1.46C19.54 15.03 20 13.57 20 12c0-4.42-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6 0-1.01.25-1.97.7-2.8L5.24 7.74C4.46 8.97 4 10.43 4 12c0 4.42 3.58 8 8 8v3l4-4-4-4v3z"
      />
    </svg>
    <span>
      Loading...
    </span>
  </div>
</button>
`;

exports[`Storyshots inputs/Button Outlined 1`] = `
<button
  className="sc-idiyUo fzGlsX"
  color="primary"
  type="button"
  variant="outlined"
>
  Outlined
</button>
`;

exports[`Storyshots inputs/Button Primary 1`] = `
<button
  className="sc-idiyUo hQiKYJ"
  color="primary"
  type="button"
>
  Primary
</button>
`;

exports[`Storyshots inputs/Button Secondary 1`] = `
<button
  className="sc-idiyUo cHUJRD"
  color="secondary"
  type="button"
>
  Secondary
</button>
`;

exports[`Storyshots inputs/ChipSelector Checkbox 1`] = `
<ul
  className="sc-gsnTZi cgptcv"
>
  <li
    className="sc-bczRLJ sc-cCsOjp eCwSUC kswRGn"
    color="secondary"
    disabled={false}
  >
    <label
      className="sc-ciZhAO bsBhxR"
      htmlFor="checkbox-apple"
    >
      <input
        checked={true}
        className="sc-jdAMXn xQarO"
        id="checkbox-apple"
        name="checkbox-apple"
        onChange={[Function]}
        type="checkbox"
      />
      林檎
    </label>
  </li>
  <li
    className="sc-bczRLJ sc-cCsOjp iyvnPX kswRGn"
    color="secondary"
    disabled={true}
  >
    <label
      className="sc-ciZhAO bsBhxR"
      htmlFor="checkbox-strawberry"
    >
      <input
        checked={false}
        className="sc-jdAMXn xQarO"
        id="checkbox-strawberry"
        name="checkbox-strawberry"
        onChange={[Function]}
        type="checkbox"
      />
      苺
    </label>
  </li>
  <li
    className="sc-bczRLJ sc-cCsOjp epEICQ kswRGn"
    color="secondary"
    disabled={false}
  >
    <label
      className="sc-ciZhAO bsBhxR"
      htmlFor="checkbox-orange"
    >
      <input
        checked={false}
        className="sc-jdAMXn xQarO"
        id="checkbox-orange"
        name="checkbox-orange"
        onChange={[Function]}
        type="checkbox"
      />
      オレンジ
    </label>
  </li>
  <li
    className="sc-bczRLJ sc-cCsOjp epEICQ kswRGn"
    color="secondary"
    disabled={false}
  >
    <label
      className="sc-ciZhAO bsBhxR"
      htmlFor="checkbox-grapefruit"
    >
      <input
        checked={false}
        className="sc-jdAMXn xQarO"
        id="checkbox-grapefruit"
        name="checkbox-grapefruit"
        onChange={[Function]}
        type="checkbox"
      />
      グレープフルーツ
    </label>
  </li>
  <li
    className="sc-bczRLJ sc-cCsOjp epEICQ kswRGn"
    color="secondary"
    disabled={false}
  >
    <label
      className="sc-ciZhAO bsBhxR"
      htmlFor="checkbox-coconut"
    >
      <input
        checked={false}
        className="sc-jdAMXn xQarO"
        id="checkbox-coconut"
        name="checkbox-coconut"
        onChange={[Function]}
        type="checkbox"
      />
      ココナッツ
    </label>
  </li>
  <li
    className="sc-bczRLJ sc-cCsOjp epEICQ kswRGn"
    color="secondary"
    disabled={false}
  >
    <label
      className="sc-ciZhAO bsBhxR"
      htmlFor="checkbox-cherry"
    >
      <input
        checked={false}
        className="sc-jdAMXn xQarO"
        id="checkbox-cherry"
        name="checkbox-cherry"
        onChange={[Function]}
        type="checkbox"
      />
      さくらんぼ
    </label>
  </li>
  <li
    className="sc-bczRLJ sc-cCsOjp epEICQ kswRGn"
    color="secondary"
    disabled={false}
  >
    <label
      className="sc-ciZhAO bsBhxR"
      htmlFor="checkbox-pineapple"
    >
      <input
        checked={false}
        className="sc-jdAMXn xQarO"
        id="checkbox-pineapple"
        name="checkbox-pineapple"
        onChange={[Function]}
        type="checkbox"
      />
      パイナップル
    </label>
  </li>
  <li
    className="sc-bczRLJ sc-cCsOjp epEICQ kswRGn"
    color="secondary"
    disabled={false}
  >
    <label
      className="sc-ciZhAO bsBhxR"
      htmlFor="checkbox-banana"
    >
      <input
        checked={false}
        className="sc-jdAMXn xQarO"
        id="checkbox-banana"
        name="checkbox-banana"
        onChange={[Function]}
        type="checkbox"
      />
      バナナ
    </label>
  </li>
  <li
    className="sc-bczRLJ sc-cCsOjp epEICQ kswRGn"
    color="secondary"
    disabled={false}
  >
    <label
      className="sc-ciZhAO bsBhxR"
      htmlFor="checkbox-grape"
    >
      <input
        checked={false}
        className="sc-jdAMXn xQarO"
        id="checkbox-grape"
        name="checkbox-grape"
        onChange={[Function]}
        type="checkbox"
      />
      葡萄
    </label>
  </li>
  <li
    className="sc-bczRLJ sc-cCsOjp epEICQ kswRGn"
    color="secondary"
    disabled={false}
  >
    <label
      className="sc-ciZhAO bsBhxR"
      htmlFor="checkbox-raspberry"
    >
      <input
        checked={false}
        className="sc-jdAMXn xQarO"
        id="checkbox-raspberry"
        name="checkbox-raspberry"
        onChange={[Function]}
        type="checkbox"
      />
      木苺
    </label>
  </li>
</ul>
`;

exports[`Storyshots inputs/ChipSelector Docs 1`] = `
<li
  className="sc-bczRLJ sc-cCsOjp kaQvzq kswRGn"
  color="primary"
  disabled={false}
>
  <label
    className="sc-ciZhAO bsBhxR"
    htmlFor="docs"
  >
    <input
      checked={true}
      className="sc-jdAMXn xQarO"
      id="docs"
      name="docs"
      onChange={[Function]}
      type="checkbox"
    />
    docs
  </label>
</li>
`;

exports[`Storyshots inputs/ChipSelector Radio 1`] = `
<ul
  className="sc-gsnTZi cgptcv"
>
  <li
    className="sc-bczRLJ sc-cCsOjp kaQvzq kswRGn"
    color="primary"
    disabled={false}
  >
    <label
      className="sc-ciZhAO bsBhxR"
      htmlFor="radio-apple"
    >
      <input
        checked={true}
        className="sc-jdAMXn xQarO"
        id="radio-apple"
        name="radio-apple"
        onChange={[Function]}
        type="radio"
      />
      林檎
    </label>
  </li>
  <li
    className="sc-bczRLJ sc-cCsOjp hrVvJR kswRGn"
    color="primary"
    disabled={true}
  >
    <label
      className="sc-ciZhAO bsBhxR"
      htmlFor="radio-strawberry"
    >
      <input
        checked={false}
        className="sc-jdAMXn xQarO"
        id="radio-strawberry"
        name="radio-strawberry"
        onChange={[Function]}
        type="radio"
      />
      苺
    </label>
  </li>
  <li
    className="sc-bczRLJ sc-cCsOjp kFRnpC kswRGn"
    color="primary"
    disabled={false}
  >
    <label
      className="sc-ciZhAO bsBhxR"
      htmlFor="radio-orange"
    >
      <input
        checked={false}
        className="sc-jdAMXn xQarO"
        id="radio-orange"
        name="radio-orange"
        onChange={[Function]}
        type="radio"
      />
      オレンジ
    </label>
  </li>
  <li
    className="sc-bczRLJ sc-cCsOjp kFRnpC kswRGn"
    color="primary"
    disabled={false}
  >
    <label
      className="sc-ciZhAO bsBhxR"
      htmlFor="radio-grapefruit"
    >
      <input
        checked={false}
        className="sc-jdAMXn xQarO"
        id="radio-grapefruit"
        name="radio-grapefruit"
        onChange={[Function]}
        type="radio"
      />
      グレープフルーツ
    </label>
  </li>
  <li
    className="sc-bczRLJ sc-cCsOjp kFRnpC kswRGn"
    color="primary"
    disabled={false}
  >
    <label
      className="sc-ciZhAO bsBhxR"
      htmlFor="radio-coconut"
    >
      <input
        checked={false}
        className="sc-jdAMXn xQarO"
        id="radio-coconut"
        name="radio-coconut"
        onChange={[Function]}
        type="radio"
      />
      ココナッツ
    </label>
  </li>
  <li
    className="sc-bczRLJ sc-cCsOjp kFRnpC kswRGn"
    color="primary"
    disabled={false}
  >
    <label
      className="sc-ciZhAO bsBhxR"
      htmlFor="radio-cherry"
    >
      <input
        checked={false}
        className="sc-jdAMXn xQarO"
        id="radio-cherry"
        name="radio-cherry"
        onChange={[Function]}
        type="radio"
      />
      さくらんぼ
    </label>
  </li>
  <li
    className="sc-bczRLJ sc-cCsOjp kFRnpC kswRGn"
    color="primary"
    disabled={false}
  >
    <label
      className="sc-ciZhAO bsBhxR"
      htmlFor="radio-pineapple"
    >
      <input
        checked={false}
        className="sc-jdAMXn xQarO"
        id="radio-pineapple"
        name="radio-pineapple"
        onChange={[Function]}
        type="radio"
      />
      パイナップル
    </label>
  </li>
  <li
    className="sc-bczRLJ sc-cCsOjp kFRnpC kswRGn"
    color="primary"
    disabled={false}
  >
    <label
      className="sc-ciZhAO bsBhxR"
      htmlFor="radio-banana"
    >
      <input
        checked={false}
        className="sc-jdAMXn xQarO"
        id="radio-banana"
        name="radio-banana"
        onChange={[Function]}
        type="radio"
      />
      バナナ
    </label>
  </li>
  <li
    className="sc-bczRLJ sc-cCsOjp kFRnpC kswRGn"
    color="primary"
    disabled={false}
  >
    <label
      className="sc-ciZhAO bsBhxR"
      htmlFor="radio-grape"
    >
      <input
        checked={false}
        className="sc-jdAMXn xQarO"
        id="radio-grape"
        name="radio-grape"
        onChange={[Function]}
        type="radio"
      />
      葡萄
    </label>
  </li>
  <li
    className="sc-bczRLJ sc-cCsOjp kFRnpC kswRGn"
    color="primary"
    disabled={false}
  >
    <label
      className="sc-ciZhAO bsBhxR"
      htmlFor="radio-raspberry"
    >
      <input
        checked={false}
        className="sc-jdAMXn xQarO"
        id="radio-raspberry"
        name="radio-raspberry"
        onChange={[Function]}
        type="radio"
      />
      木苺
    </label>
  </li>
</ul>
`;

exports[`Storyshots inputs/IconButton Docs 1`] = `
<button
  className="sc-evZas iBlbdI"
  onClick={[Function]}
  type="button"
>
  <svg
    aria-label="削除"
    className="sc-iBkjds eXmDJP"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M0 0h24v24H0V0z"
      fill="none"
    />
    <path
      d="M16 9v10H8V9h8m-1.5-6h-5l-1 1H5v2h14V4h-3.5l-1-1zM18 7H6v12c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7z"
    />
  </svg>
</button>
`;

exports[`Storyshots inputs/InputBase Docs 1`] = `
<input
  className="sc-ezWOiH jyJKRD"
  hasError={false}
  id="input-base"
  name="input-base-docs"
  type="text"
  value="input base sample"
/>
`;

exports[`Storyshots inputs/MailButton Docs 1`] = `
<button
  className="sc-idiyUo hQiKYJ sc-bZnhIo dfihyQ"
  color="primary"
  onClick={[Function]}
  type="button"
>
  <div>
    <svg
      aria-hidden={true}
      className="sc-iBkjds fiupan"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7 40Q5.8 40 4.9 39.1Q4 38.2 4 37V11Q4 9.8 4.9 8.9Q5.8 8 7 8H41Q42.2 8 43.1 8.9Q44 9.8 44 11V37Q44 38.2 43.1 39.1Q42.2 40 41 40ZM24 24.9 7 13.75V37Q7 37 7 37Q7 37 7 37H41Q41 37 41 37Q41 37 41 37V13.75ZM24 21.9 40.8 11H7.25ZM7 13.75V11V13.75V37Q7 37 7 37Q7 37 7 37Q7 37 7 37Q7 37 7 37Z"
      />
    </svg>
    <span>
      メールアドレスでログインする
    </span>
  </div>
</button>
`;

exports[`Storyshots inputs/PasswordInput Docs 1`] = `
<div
  className="sc-kLLXSd hmhJIr"
>
  <input
    className="sc-ezWOiH jyJKRD"
    hasError={false}
    id="password-input"
    name="password-input-docs"
    type="password"
    value="password input sample"
  />
  <button
    className="sc-evZas iBlbdI sc-bZkfAO"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-label="パスワードを表示する"
      className="sc-iBkjds inntBc"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0V0zm0 0h24v24H0V0zm0 0h24v24H0V0zm0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M12 6c3.79 0 7.17 2.13 8.82 5.5-.59 1.22-1.42 2.27-2.41 3.12l1.41 1.41c1.39-1.23 2.49-2.77 3.18-4.53C21.27 7.11 17 4 12 4c-1.27 0-2.49.2-3.64.57l1.65 1.65C10.66 6.09 11.32 6 12 6zm-1.07 1.14L13 9.21c.57.25 1.03.71 1.28 1.28l2.07 2.07c.08-.34.14-.7.14-1.07C16.5 9.01 14.48 7 12 7c-.37 0-.72.05-1.07.14zM2.01 3.87l2.68 2.68C3.06 7.83 1.77 9.53 1 11.5 2.73 15.89 7 19 12 19c1.52 0 2.98-.29 4.32-.82l3.42 3.42 1.41-1.41L3.42 2.45 2.01 3.87zm7.5 7.5l2.61 2.61c-.04.01-.08.02-.12.02-1.38 0-2.5-1.12-2.5-2.5 0-.05.01-.08.01-.13zm-3.4-3.4l1.75 1.75c-.23.55-.36 1.15-.36 1.78 0 2.48 2.02 4.5 4.5 4.5.63 0 1.23-.13 1.77-.36l.98.98c-.88.24-1.8.38-2.75.38-3.79 0-7.17-2.13-8.82-5.5.7-1.43 1.72-2.61 2.93-3.53z"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots inputs/TextArea Docs 1`] = `
<textarea
  className="sc-iTONeN cYGIZe"
  hasError={false}
  id="TextArea"
  name="text-area-docs"
  value="TextArea sample"
/>
`;

exports[`Storyshots inputs/TextButton Docs 1`] = `
<button
  className="sc-idiyUo hQiKYJ sc-dIouRR"
  color="primary"
  onClick={[Function]}
  type="button"
  variant="contained"
>
  TextButton
</button>
`;

exports[`Storyshots inputs/TextInput Docs 1`] = `
<div
  className="sc-himrzO gGfMEn"
>
  <input
    className="sc-ezWOiH jyJKRD"
    hasError={false}
    id="text-input"
    name="text-input-docs"
    type="text"
    value="text input sample"
  />
  <button
    className="sc-evZas iBlbdI sc-jIZahH"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-label="text-input-docsの入力を削除する"
      className="sc-iBkjds inntBc"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M14.59 8L12 10.59 9.41 8 8 9.41 10.59 12 8 14.59 9.41 16 12 13.41 14.59 16 16 14.59 13.41 12 16 9.41 14.59 8zM12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots navigation/Link Docs 1`] = `
<a
  className="sc-iAvgwm fTFCOp sc-efBctP"
  href="/"
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  Link Story Component
</a>
`;

exports[`Storyshots navigation/Tabs Docs 1`] = `
<ul
  className="sc-cTQhss gpFnhY"
  role="tablist"
>
  <li
    className="sc-jOrMOR dxLmhw"
    color="secondary"
    role="presentation"
  >
    <button
      aria-controls="tab-panel-apple"
      aria-selected={false}
      onClick={[Function]}
      role="tab"
      type="button"
    >
      <span>
        林檎
      </span>
    </button>
  </li>
  <li
    className="sc-jOrMOR fHmLjH"
    color="secondary"
    role="presentation"
  >
    <button
      aria-controls="tab-panel-strawberry"
      aria-selected={true}
      onClick={[Function]}
      role="tab"
      type="button"
    >
      <span>
        苺
      </span>
    </button>
  </li>
  <li
    className="sc-jOrMOR dxLmhw"
    color="secondary"
    role="presentation"
  >
    <button
      aria-controls="tab-panel-orange"
      aria-selected={false}
      onClick={[Function]}
      role="tab"
      type="button"
    >
      <span>
        オレンジ
      </span>
    </button>
  </li>
</ul>
`;

exports[`Storyshots parts/auth/LoginSelectCard Docs 1`] = `
<section
  className="sc-gSAPjG hRCCoZ"
>
  <h3
    className="sc-hTtwUo bHtbMG"
  >
    ログイン
  </h3>
  <hr
    className="sc-dPyBCJ iUQmdg"
  />
  <div
    className="sc-jgbSNz cmEJtT"
  >
    <div
      className="sc-lbOyJj dTJvNc"
    >
      <button
        className="sc-idiyUo hQiKYJ sc-bZnhIo dfihyQ"
        color="primary"
        onClick={[Function]}
        type="button"
      >
        <div>
          <svg
            aria-hidden={true}
            className="sc-iBkjds fiupan"
            viewBox="0 0 48 48"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 40Q5.8 40 4.9 39.1Q4 38.2 4 37V11Q4 9.8 4.9 8.9Q5.8 8 7 8H41Q42.2 8 43.1 8.9Q44 9.8 44 11V37Q44 38.2 43.1 39.1Q42.2 40 41 40ZM24 24.9 7 13.75V37Q7 37 7 37Q7 37 7 37H41Q41 37 41 37Q41 37 41 37V13.75ZM24 21.9 40.8 11H7.25ZM7 13.75V11V13.75V37Q7 37 7 37Q7 37 7 37Q7 37 7 37Q7 37 7 37Z"
            />
          </svg>
          <span>
            メールアドレスでログインする
          </span>
        </div>
      </button>
      <button
        className="sc-idiyUo hQiKYJ sc-ehmTmK iBRXia"
        color="primary"
        onClick={[Function]}
        type="button"
      >
        <div>
          <svg
            aria-hidden={true}
            className="sc-iBkjds fiupan"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.545 6.558a9.42 9.42 0 0 1 .139 1.626c0 2.434-.87 4.492-2.384 5.885h.002C11.978 15.292 10.158 16 8 16A8 8 0 1 1 8 0a7.689 7.689 0 0 1 5.352 2.082l-2.284 2.284A4.347 4.347 0 0 0 8 3.166c-2.087 0-3.86 1.408-4.492 3.304a4.792 4.792 0 0 0 0 3.063h.003c.635 1.893 2.405 3.301 4.492 3.301 1.078 0 2.004-.276 2.722-.764h-.003a3.702 3.702 0 0 0 1.599-2.431H8v-3.08h7.545z"
            />
          </svg>
          <span>
            Googleアカウントでログインする
          </span>
        </div>
      </button>
      <button
        className="sc-idiyUo hQiKYJ sc-hiMGwR glMsCC"
        color="primary"
        onClick={[Function]}
        type="button"
      >
        <div>
          <svg
            aria-hidden={true}
            className="sc-iBkjds fiupan"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"
              fillRule="evenodd"
            />
          </svg>
          <span>
            Githubアカウントでログインする
          </span>
        </div>
      </button>
    </div>
  </div>
</section>
`;

exports[`Storyshots parts/auth/MailLoginForm Docs 1`] = `
<section
  className="sc-gSAPjG hRCCoZ"
>
  <h3
    className="sc-hTtwUo bHtbMG"
  >
    ログイン
  </h3>
  <hr
    className="sc-dPyBCJ iUQmdg"
  />
  <div
    className="sc-jgbSNz cmEJtT"
  >
    <form
      className="sc-gFGZVQ gbExAr"
      onSubmit={[Function]}
    >
      <div
        className="sc-gXmSlM gmwcss"
      >
        <label
          aria-describedby="email-describe"
          className="sc-cxabCf jsgzcy"
          htmlFor="email"
          required={true}
        >
          Email
        </label>
        <div
          className="sc-llJcti gGPsxJ"
        >
          <span
            id="email-describe"
          >
            登録したメールアドレスを入力してください
          </span>
        </div>
        <div
          className="sc-himrzO gGfMEn"
        >
          <input
            className="sc-ezWOiH jyJKRD"
            hasError={false}
            id="email"
            name="email"
            onBlur={[Function]}
            onChange={[Function]}
            type="email"
            value=""
          />
        </div>
      </div>
      <div
        className="sc-ikZpkk bAkAFX"
      >
        <label
          aria-describedby="password-describe"
          className="sc-cxabCf jsgzcy"
          htmlFor="password"
          required={true}
        >
          パスワード
        </label>
        <div
          className="sc-llJcti gGPsxJ"
        >
          <span
            id="password-describe"
          >
            登録したパスワードを入力してください
          </span>
        </div>
        <div
          className="sc-kLLXSd hmhJIr"
        >
          <input
            className="sc-ezWOiH jyJKRD"
            hasError={false}
            id="password"
            name="password"
            onBlur={[Function]}
            onChange={[Function]}
            type="password"
            value=""
          />
          <button
            className="sc-evZas iBlbdI sc-bZkfAO"
            onClick={[Function]}
            type="button"
          >
            <svg
              aria-label="パスワードを表示する"
              className="sc-iBkjds inntBc"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0V0zm0 0h24v24H0V0zm0 0h24v24H0V0zm0 0h24v24H0V0z"
                fill="none"
              />
              <path
                d="M12 6c3.79 0 7.17 2.13 8.82 5.5-.59 1.22-1.42 2.27-2.41 3.12l1.41 1.41c1.39-1.23 2.49-2.77 3.18-4.53C21.27 7.11 17 4 12 4c-1.27 0-2.49.2-3.64.57l1.65 1.65C10.66 6.09 11.32 6 12 6zm-1.07 1.14L13 9.21c.57.25 1.03.71 1.28 1.28l2.07 2.07c.08-.34.14-.7.14-1.07C16.5 9.01 14.48 7 12 7c-.37 0-.72.05-1.07.14zM2.01 3.87l2.68 2.68C3.06 7.83 1.77 9.53 1 11.5 2.73 15.89 7 19 12 19c1.52 0 2.98-.29 4.32-.82l3.42 3.42 1.41-1.41L3.42 2.45 2.01 3.87zm7.5 7.5l2.61 2.61c-.04.01-.08.02-.12.02-1.38 0-2.5-1.12-2.5-2.5 0-.05.01-.08.01-.13zm-3.4-3.4l1.75 1.75c-.23.55-.36 1.15-.36 1.78 0 2.48 2.02 4.5 4.5 4.5.63 0 1.23-.13 1.77-.36l.98.98c-.88.24-1.8.38-2.75.38-3.79 0-7.17-2.13-8.82-5.5.7-1.43 1.72-2.61 2.93-3.53z"
              />
            </svg>
          </button>
        </div>
      </div>
      <hr
        className="sc-dPyBCJ iUQmdg"
      />
      <div
        className="sc-ckMVTt hsYnCa"
      >
        <button
          className="sc-idiyUo dNYGQm sc-dIouRR"
          color="default"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          クリア
        </button>
        <button
          className="sc-idiyUo cHUJRD sc-dIouRR"
          color="secondary"
          disabled={false}
          type="submit"
        >
          ログイン
        </button>
      </div>
    </form>
  </div>
</section>
`;

exports[`Storyshots surfaces/Accordion Docs 1`] = `
<section
  className="sc-kgUAyh eSwqku"
>
  <button
    aria-controls="accordion-docs-section"
    aria-disabled={true}
    className="sc-bBXxYQ hNcyAi"
    id="accordion-docs-header"
    onClick={[Function]}
  >
    <h3
      className="sc-cOFTSb kVxkZx"
    >
      Accordion Component
    </h3>
    <svg
      aria-hidden={true}
      className="sc-iBkjds cqXHKM"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
      />
    </svg>
  </button>
  <div
    aria-labelledby="accordion-docs-header"
    className="sc-BeQoi flsIUH"
    id="accordion-docs-section"
  >
    <p>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </p>
  </div>
</section>
`;

exports[`Storyshots surfaces/Card Docs 1`] = `
<section
  className="sc-gSAPjG hRCCoZ"
>
  <h3
    className="sc-hTtwUo bHtbMG"
  >
    Card Component
  </h3>
  <hr
    className="sc-dPyBCJ iUQmdg"
  />
  <div
    className="sc-jgbSNz cmEJtT"
  >
    <p>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </p>
  </div>
</section>
`;

exports[`Storyshots surfaces/HeaderBar Docs 1`] = `
<header
  className="sc-jfmDQi jJOQyl"
>
  <h2
    className="sc-iNWwEs hLMkYV"
  >
    HeaderBar Component
  </h2>
  <button
    aria-label="メニューを表示する"
    className="sc-evZas iBlbdI sc-lbxAil iEFUJu"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-hidden={true}
      className="sc-iBkjds fiupan"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
      />
       
    </svg>
  </button>
</header>
`;

exports[`Storyshots surfaces/Paper Docs 1`] = `
<section
  className="sc-olbas hZDdiG"
>
  <div
    className="sc-eKszNL jwxYty"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
  </div>
</section>
`;

exports[`Storyshots unique/GithubButton Docs 1`] = `
<button
  className="sc-idiyUo hQiKYJ sc-hiMGwR glMsCC"
  color="primary"
  onClick={[Function]}
  type="button"
>
  <div>
    <svg
      aria-hidden={true}
      className="sc-iBkjds fiupan"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"
        fillRule="evenodd"
      />
    </svg>
    <span>
      Githubアカウントでログインする
    </span>
  </div>
</button>
`;

exports[`Storyshots unique/GoogleButton Docs 1`] = `
<button
  className="sc-idiyUo hQiKYJ sc-ehmTmK iBRXia"
  color="primary"
  onClick={[Function]}
  type="button"
>
  <div>
    <svg
      aria-hidden={true}
      className="sc-iBkjds fiupan"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.545 6.558a9.42 9.42 0 0 1 .139 1.626c0 2.434-.87 4.492-2.384 5.885h.002C11.978 15.292 10.158 16 8 16A8 8 0 1 1 8 0a7.689 7.689 0 0 1 5.352 2.082l-2.284 2.284A4.347 4.347 0 0 0 8 3.166c-2.087 0-3.86 1.408-4.492 3.304a4.792 4.792 0 0 0 0 3.063h.003c.635 1.893 2.405 3.301 4.492 3.301 1.078 0 2.004-.276 2.722-.764h-.003a3.702 3.702 0 0 0 1.599-2.431H8v-3.08h7.545z"
      />
    </svg>
    <span>
      Googleアカウントでログインする
    </span>
  </div>
</button>
`;

exports[`Storyshots utils/Backdrop With Loading 1`] = `
<button
  onClick={[Function]}
>
  Open
</button>
`;

exports[`Storyshots utils/Divider Docs 1`] = `
<hr
  className="sc-dPyBCJ iUQmdg"
/>
`;

exports[`Storyshots utils/LoadingGuard Loading 1`] = `
<button
  onClick={[Function]}
>
  Open
</button>
`;

exports[`Storyshots utils/LoadingSpinner Docs 1`] = `
<svg
  aria-hidden={true}
  className="sc-iBkjds eXmDJP sc-fEOsli drIlWz"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
  <path
    d="M12 4V1L8 5l4 4V6c3.31 0 6 2.69 6 6 0 1.01-.25 1.97-.7 2.8l1.46 1.46C19.54 15.03 20 13.57 20 12c0-4.42-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6 0-1.01.25-1.97.7-2.8L5.24 7.74C4.46 8.97 4 10.43 4 12c0 4.42 3.58 8 8 8v3l4-4-4-4v3z"
  />
</svg>
`;
